--- a/home/templates/home/home.html
+++ b/home/templates/home/home.html
@@ -1,4 +1,9 @@
 {% extends 'base.html' %}
+{% load static %}
+
+{% block extraheader %}
+    <link rel="stylesheet" href="{% static 'home/css/style.css' %}">
+{% endblock  %}
 
 {% block content %}
     <h3>Hello user</h3>
