--- a/templates/base.html
+++ b/templates/base.html
@@ -1,16 +1,18 @@
+{% load static %}
+
 <!DOCTYPE html>
 <html lang="en">
 <head>
     <meta charset="UTF-8">
     <title>Online Shop</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0-beta1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-0evHe/X+R7YkIZDRvuzKMRqM+OrBnVFBL6DOitfPri4tjfHxaWutUpFmBp4vmVor" crossorigin="anonymous">
-    <style>
-        .jumbotron{
-            padding: 20px;
-            margin-bottom: 20px;
-            background-color: #e9ecef;
-        }
-    </style>
+
+    <link rel="stylesheet" href="{% static 'css/base_styles.css' %}">
+
+    {% block extraheader %}
+    
+    {% endblock  %}
+
 </head>
 <body>
     {% include "inc/navbar.html" %}
