--- a/home/templates/home/home.html
+++ b/home/templates/home/home.html
@@ -6,5 +6,12 @@
 {% endblock  %}
 
 {% block content %}
-    <h3>Hello user</h3>
+    {% for product in products %}
+        <div class="card" style="width: 18rem;">
+            <img src="{{ product.image.url }}" class="card-img-top">
+            <div class="card-body">
+                <a href="{{ product.get_absolute_url }}"><h5 class="card-title">{{ product.name }}</h5></a>
+            </div>
+        </div>      
+    {% endfor %}
 {% endblock  %}
